--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/Bornean-Orangutan/Products-API#readme",
   "dependencies": {
+    "artillery": "^2.0.0-27",
     "axios": "^1.2.1",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "n-readlines": "^1.0.1",
+    "newrelic": "^9.7.4",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
