--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-NR_KEY = '1c32ac27b657e7eb26e25bc676c13b3eFFFFNRAL';
+# Postgres connection variables
+
+PGUSER='ubuntu'
+PGPASSWORD='ubuntu'
+PGHOST='ec2-3-19-28-165.us-east-2.compute.amazonaws.com'
+PGDATABASE='products'
+PGPORT=5432
