--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "artillery": "^2.0.0-27",
     "axios": "^1.2.1",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "n-readlines": "^1.0.1",
