--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "artillery": "^2.0.0-27",
     "axios": "^1.2.1",
     "compression": "^1.7.4",
+    "dot": "^1.1.3",
     "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "n-readlines": "^1.0.1",
